# anilist-api

./: .gitignore  README.md  anilist_client.py  custom_query.py  examples.py  main.py  pyproject.toml  show_available_keys.py
query_examples/: anime_details.graphql  character_info.graphql  search_anime.graphql  seasonal_anime.graphql  variables.json
